 * Tweaks to the system queue introduced in the last patchlevel. [SW]
 * @pemit now uses the same nospoof header as other commands. [MG]
 * When creating a minimal db, the MUSH now respects the read_remote_desc
   option, and may set @descs "nearby". Reported by Paige. [MG]
 * Exits now show accented names (via @nameaccent) in "look". Suggested by
   Cheetah. [MG]

Fixes:
 * No_Pay was implicit if executor is #1, but was _not_ implicit if 
   Owner(executor) was #1. Caused some obscure queue cost bugs.
   Discovered by Padraic@M*U*S*H. [GM]
 * %$-subs didn't work inside @switch's default case. Patch by Covenent.
 * %0-9 were being overridden when using /inline/localize. Patch by Covenent.
 * You couldn't @chat on open channels. Reported by Padraic. [MG]
 * Win32 compile fixes by Daniel Powell. [MG]
 * The Open_Anywhere power didn't fully work as intended. Patch by Covenent.
 * regrab*() functions removed ansi. Reported by Covenent. [MG]
 * munge() didn't play nice with ansi. [MG]
 * @shutdown/reboot would hang unencrypted sockets for players with both
   SSL and normal connections. Reported by Padraic. [SW]
 * @chatformat sometimes received the player's name without accents by
   mistake. Reported by Sketch. [MG]
 * Bug in @wipe fixed by Padraic.
 * Objects couldn't be @tel'd to exits which weren't in their current
   location. Reported by Padraic.
 * Fixed an obscure bug in "say" when sound is propagated. From a report by
   Padraic@M*U*S*H. [MG]
 * Various help fixes. [MG]
 * Prevent persistant 'Attempt to write to error log before it was started!'
   error in netmush.log [MG]
 * Rooms could not locate objects by name. Reported by Sketch. [MG]
 * Players using Pueblo who are not set ANSI will no longer see colors. [MG]
 * The <inside> arg to tel() didn't work. Fixed by Padraic.
 * 'make clean' in game/txt no longer deletes the configure-generated
   compose.sh file. Suggested by Padraic. [SW]

Functions: